--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -24,7 +24,7 @@ discussLinkHN: https://news.ycombinator.com/item?id=20064900
 
 Congratulations on getting the offer(s)! You may think that you've done the heavy-lifting, you've slogged through interviews and the hardest part is done. While that may be true for some, for most people **compensation** is a really important factor when it comes to deciding on which job they want to take.
 
-Here, we will discuss a breakdown of a typical compensation package and then move on to negotiation.
+In this article, we will discuss a breakdown of a compensation package and then talk about the rules of negotiation.
 
 ## Table of Contents
 * Base Salary
@@ -40,34 +40,37 @@ The base salary you get depends on which type of company it is: startup or estab
 
 Startups usually give you a higher base-salary because their stock doesn't mean shit. You're taking a gamble on your stock being profitable in the future with a company that might fail and therefore you get a higher base.
 
-For interns, A base salary of 4-6K can be expected in most companies.
-For new-grads, The 2020 base salaries are starting at a more competitive range of **USD 120,000 - 150,000 annually.**
+Interns: A base salary of *4-6K* can be expected in most companies.
 
-It's a common misconception that the higher up the chain you go the more your base salary increases. This is not true. While it does grow linearly but after you become a senior engineer/lead/manager, you get more equity as you're expected to lead your peers which increases your total compensation.
+New Grads: The 2020 base salaries are starting at a more competitive range of *USD 120,000 - 150,000 annually.*
 
-Companies that have more money like Netflix, Google, Facebook, etc are capable of offering more money if there are competing offers.
+It's a common misconception to think that the higher up the chain you go the more your base salary increases. This is not true. While your salary grow for a couple of years, after you become a senior engineer/lead/manager, you get more equity as you're expected to lead your peers which increases your total compensation.
+
+*Companies that have more money like Netflix, Google, Facebook, etc are capable of offering more money if have competing offers.*
 
 ## Sign-on bonus
 
-This is a one-time payment that you get paid when you join the company. Most companies start with a base sign-on of $10,000 but it very easily goes up from 25000 - 50000.
+This is a one-time payment that you get paid when you join the company. Most companies start with a base sign-on of 10,000 dollars but it can go upto $50,000
 
-Most companies have a clause in the contract that if you leave before the **one-year mark you need to return prorated amount.**
+Most companies have a clause in the contract that if **you leave before the one-year mark you need to return prorated amount.**
 
-Another thing to remember is that bonuses are taxed on the highest bracket; Around 40-45%. Therefore, if you receive a single-sign-on bonus of $20,000 expect to receive around 13K.
+Another thing to remember is that bonuses are taxed on the highest bracket: Around 40-45%. Therefore, if you receive a single-sign-on bonus of $20,000 expect to receive around 13K.
 
 ## Equity/Stocks
 
-The difference between tech companies and non-tech companies is equity. Tech workers get a share in the company; which is to motivate employees to work in the best interest of the company and can be a huge chunk of the total compensation.
+The difference between tech companies and non-tech companies is equity. Tech workers get a share in the company; which is to motivate employees to work in the best interest of the company and it's something that can be a huge chunk of the total compensation.
 
-You can usually vest equity (When the whole amount is available to you) typically over 4 years. Most companies have what's called a **One-Year cliff** which means that you won't have any stocks available to you until the end of 1 year but then you will get your shares on a prorated basis of 1 month at a time for 3 years.
+You can usually vest equity (When the whole amount is available to you) typically over **4 years.** Most companies have what's called a **One-Year cliff** which means that you won't have any stocks available to you until the end of 1 year but then you will get your shares on a prorated basis of 1 month at a time for 3 years.
 
-Stocks mean something when they are public. If a company has an initial public offering (IPO) their stocks have value. Startups will usually provide you with insane amounts of equity but they don't mean much until they IPO. So think about what you are getting into!
+Stocks have value when they are publically avaiable. If a company has an [Initial Public Offering (IPO)](https://www.investopedia.com/terms/i/ipo.asp) their stocks have value. Startups will usually provide you with insane amounts of equity but they don't mean much until they IPO. So think about what you are getting into!
 
-Stocks can be granted in any number for a new-grad; from 50K - 400K over 4 years depending on your negotiation power.
+Stocks can be granted in any number for a new-grad: 50K - 400K over 4 years depending on your negotiation power.
 
-### Stock Options
+### Employee Stock Options
 
-Stock options are usually given at mid-sized companies. They are different from the equity we discussed above called RSU's (Received stock units) which are given to you. Stock options are different in the sense that you have to purchase them. You are also permitted to purchase a limited number of stock but the good news is that you can purchase them at a **Strike Price** which is a price much lower than what the current-valuation of 1 stock is.
+[Employee Stock Options--ESOs](https://www.investopedia.com/terms/e/eso.asp) are usually given at mid-sized companies. They are different from the equity we discussed above ([Restricted Stock Unit--RSUs](https://www.investopedia.com/terms/r/restricted-stock-unit.asp)) which are given to you. Stock options are different in the sense that you have to purchase them. You are also permitted to purchase a limited number of stock but the good news is that you can purchase them at a **Strike Price** which is a price much lower than what the current-valuation of 1 stock is.
+
+ *The greatest benefits of a stock option are realized if a company's stock rises above the exercise price. Typically, ESOs are issued by the company and cannot be sold, unlike standard listed or exchange-traded options. When a stock’s price rises above the call option exercise price, call options are exercised and the holder obtains the company’s stock at a discount. The holder may choose to immediately sell the stock in the open market for a profit or hold onto the stock over time.*
 
 Example: If Company X gives you the purchasing power of 2000 stocks at a strike price of 10 dollars per stock at a valuation of 20 dollars per stock then you are essentially doubling your money.
 
@@ -77,9 +80,9 @@ Value of 2000 stocks at strike price = 2000*10 = 20,000
 
 Profit = 40000-20000 = $20,000
 
-**When you leave a company you are given an exercise window to exercise your stock options. It's very important to have cash-on-hand to purchase these stocks**
+**When you leave a company you are given a time-frame to exercise your stock options. It's very important to have cash-on-hand to purchase these stocks**
 
-### Misc bonuses/perks
+### Perks And Benefits
 
 While these perks are not exactly cash, they can help you save money and are also targeted at making your life easier. Some of those perks are:
 
@@ -103,7 +106,7 @@ Now that you've understood everything about compensation, it's time to dive into
 
 Have everything written down as it might be helpful later. Even if the recruiter tries to forget some of the things they've mentioned, you would have everything written down.
 
-Write everything down even if it doesn't directly mean money:
+Write everything down even if it doesn't have direct monetary value:
 
 * We work with Python, Spark and Scala: Write that down!
 * We offer 4 weeks PTO and 1 year maternal/paternal leave: Write that down!
@@ -238,3 +241,4 @@ Gautam
 * [Glassdoor Salaries](https://www.glassdoor.com/Salaries/index.htm) - Get a salary estimate
 * [How I negotiated a $300,000 job offer in Silicon Valley](How I negotiated a $300,000 job offer in Silicon Valley)
 * [10 Rules for Negotiation](http://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/) 
+* [Investopedia](https://www.investopedia.com/)
