--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -22,28 +22,28 @@ next: "/blog/get-a-job-4/"
 
 # Introduction and Background
 
-Have you ever failed a tech interview? I have failed a ton of interviews from behavioral, phone-screens and onsite whiteboarding questions. I can remember them to be embarrassing situations that I have faced but it's also something that I learned a lot from.
+Have you ever failed a tech interview? I have failed a ton of interviews from behavioral interviews, phone-screens, and onsite whiteboarding questions. I can remember the embarrassing situations of having massive pit stains and having to restrict raising my hand to write code. 
 
-I realized that I didn't have a set schedule and didn't put in enough prep time and thought that coding experience in previous internships would help me crack these interviews. Well, coding interviews are a different beast. The test for algorithmic puzzles is very different from coding in real life and therefore, one needs to prepare accordingly.
+For the most part, I thought I was well prepared to face Interviews. But, I kept on failing interviews one after another. I realized that I didn't have a set schedule and didn't put in enough prep time and thought that coding experience in previous internships would help me crack these interviews. Well, coding interviews are a different beast. The test for algorithmic puzzles is very different from coding in real life, and therefore, one needs to prepare accordingly.
 
-Interviewers want to work with candidates they like. Leaving a good impression greatly improves your chances of success.
+Interviewers want to work with candidates they like. Leaving a good impression on them improves your chances of success.
 
 > Tell me about yourself. How did you get into coding? Why was X(job-specific) a good fit for you? How do your goals align with X companies?
 
 ## The elevator pitch
-An elevator pitch is exactly what it sounds. Imagine you are stuck in an elevator with someone who you want to sell yourself to. You have about 30 seconds to a minute to get your point across.
+An elevator pitch is exactly what it sounds like: imagine you are stuck in an elevator with someone who you want to sell yourself to. You have about 30 seconds to a minute to get your point across.
 
 * Keep it short
 * Get straight to the point
 * Grab their attention
 
-For example, for internships you can mention your name, school, area of focus and past internships/noteworthy projects. For full-time positions, you should mention past-companies, note-worthy projects, etc.
+For example, for internships, you can say your name, school, area of focus, and past internships/noteworthy projects. For full-time positions, you should mention past-companies, note-worthy projects, etc.
 
-> My name is Gautam and I'm currently a student at CSU Monterey Bay. I have previously interned at the Museum of Natural History where I developed an application that visualizes climate change in Monterey county which is used by over 50 researchers. 
+> My name is Gautam and I'm currently a student at CSU Monterey Bay. I have previously interned at the Museum of Natural History, where I developed an application that visualizes climate change in Monterey county, which is used by over 50 researchers. 
 >
 > I became interested in the mapping space because I loved the power of spreading a message across using a Map. Since then I have been working at learning X tools and researching X possibilities which is when I came across Uber maps. I'd be grateful to speak with you about X opportunity. 
 
-With an interviewer, you must always ask the question: Why do they want me? Align yourself with the values of the company, understand what tech-stack they use, read their engineering blog and impress the interviewer.
+With an interviewer, you must always ask the question: Why do they want me? Align yourself with the values of the company, understand what tech-stack they use, read their engineering blog, and impress the interviewer.
 
 
 ## Assumptions
@@ -54,7 +54,7 @@ This article covers a general tech-interview blueprint: Behavioral interviews an
 
 ## Time To Prepare
 
-Assume that to cover preparation end to end you will need a full month of dedication spending 2-3 hours a day prepping. You can increase or decrease that based on your experience.
+Assume that to cover preparation end to end; you will need a full month of dedication, spending 2-3 hours a day prepping. You can increase or decrease that based on your experience.
 
 ## Table Of Contents
 
@@ -65,33 +65,33 @@ Assume that to cover preparation end to end you will need a full month of dedica
 
 **Now that you have a good understanding of what to cover, let's dive right into it.**
 
-You've spent hours crafting your resume, applying to jobs and practicing coding. Now the time is to put your skills to test. In this section, we will discuss how to crack the behavioral and coding interview and what type of questions you can expect.
+You've spent hours crafting your resume, applying to jobs, and practicing coding. Now the time is to put your skills to test. In this section, we will discuss how to crack the behavioral and coding interview and what type of questions you can expect.
 
-Later, we will talk about what to do and what not to do during each type of interview followed by tools that we can use to help us succeed.
+Later, we will talk about what to do and what not to do during each type of interview, followed by tools that we can use to help us succeed.
 
 ## Cracking The Behavioral Interview
 
-Succeeding in an interview involves more than just technical skills. Behavioral interviews are very important and are **directly proportional** to how much experience you have.
-Senior engineers are expected to lead, strategize and mentor with other engineers and therefore the bar of people skills is much higher.
+Succeeding in an interview involves more than just technical skills. Behavioral interviews are crucial, and their level of difficulty is  *directly proportional* to how much experience you have.
+Senior engineers are expected to lead, strategize, and mentor with other engineers, and therefore the bar of people skills is much higher.
 
-Hiring a talented engineer that cannot work with others can ultimately be a net deficit for companies. Companies don’t want to hire [brilliant jerks](http://www.brendangregg.com/blog/2017-11-13/brilliant-jerks.html). The company is better off not hiring a very talented engineer who refuses to work with others or causes an entire team to be unproductive. Companies want to hire the right person that will work well with the existing employees and help the team and company achieve greater heights, and behavioral interviews are one way of determining if someone will be good to work with from a non-technical standpoint.
+Hiring a talented engineer that cannot work with others can ultimately be a net deficit for companies. Companies don't want to hire [brilliant jerks](http://www.brendangregg.com/blog/2017-11-13/brilliant-jerks.html). The company is better off not hiring a very talented engineer who refuses to work with others or causes an entire team to be unproductive. Companies want to hire the right person that will work well with the existing employees and help the team and company achieve greater heights. Behavioral interviews are one way of determining if someone will be useful to work with from a non-technical standpoint.
 
 ## Most companies evaluate behavioral skills
 
-Companies value behavioral skills and do evaluate candidates on them. At the time of writing, Facebook has one round (out of four) dedicated to behavioral interviews. Airbnb has TWO rounds (out of six) dedicated to behavioral interviews/company fit. Lyft has one round (out of five) dedicated to experience and situational questions by a hiring manager.
+Companies value behavioral skills and do evaluate candidates on them. At the time of writing, Facebook has one round (out of four) dedicated to behavioral interviews. 
 
-## What Facebook looks for in behavioral interviews
+## What Salesforce looks for in behavioral interviews
 
 - Discuss anything written on your resume, and be able to go in-depth
 - Provide specific examples about what you did and the resulting impact
 - Critique yourself and share what you learned from a past situation
-- Talk about what you like about your current role and/or being a developer
+- Talk about what you like about your current role and being a developer
 - Discuss what and why changes you would like to make
 
 
 ## Cracking The Technical Interview
 
-The technical interview whether whiteboarding or remote boils down to the same things:
+The technical interview, whether whiteboarding or remote boils down to the same things:
 
 * Can you solve a problem?
 * Can you solve it efficiently?
@@ -103,7 +103,7 @@ The technical interview whether whiteboarding or remote boils down to the same t
 
 It's time to review the basics: **Data Structures and Algorithms**. 
 
-List of **The most important** Data Structures and Algorithms:
+List of **The most essential** Data Structures and Algorithms:
 
 * Arrays and HashMaps
 * Linked Lists
@@ -114,9 +114,9 @@ List of **The most important** Data Structures and Algorithms:
 
 The important thing here is to know the in&out of your data structure in a language that you are comfortable with. Knowing the data-structure well gives you the ability to solve questions that you haven't faced before.
 
-**How to solve questions**: The way I approached solving questions was by setting a time of 1 hour for each question. No matter what, after 1 hour I would stop and this was to replicate an interview setting. I would try to solve a question for 30 minutes and if I couldn't, I would look up the solution and code it up in the last 30 minutes.
+**How to solve questions**: The way I approached solving problems was by setting a time of 1 hour for each question. No Matter what, after 1 hour, I would stop, and this was to replicate an interview setting. I would try to solve a problem for 30 minutes, and if I couldn't, I would look up the solution and code it up in the last 30 minutes.
 
-Take note of the question that you had to look up and try to solve it again without looking the next day and then one more time after a week. Make sure that you're extremely comfortable with it.
+Take note of the question that you had to look up and try to solve it again without looking the next day and then one more time after a week. Make sure that you're comfortable with it.
 
 **Where should I practice questions from**: The sources are usual. I practiced using [Cracking The Coding Interview](http://www.crackingthecodinginterview.com/) and using [LeetCode](https://leetcode.com/)
 
@@ -126,18 +126,18 @@ A great source that I found that someone created a curated list of 50 or so ques
 
 ### Do's and Don't During A Technical Interview
 
-* Do: **Dress well**. This is a weird one. Most engineers don't care how you dress and the dress code in silicon valley is casual as already but some (older) interviewers make a decision based on how your appearance is.
-* Do: Start the interview by **greeting the interviewer** and trying to make a good first impression. Be confident.
+* Do: **Dress well**. This is a weird one. Most engineers don't care how you dress, and the dress code in silicon valley is casual as already, but some (older) interviewers make a decision based on how your appearance is.
+* Do: Start the interview by **greeting the interviewer** and trying to make an excellent first impression. Be confident.
 * Do: **Listen to the interviewer carefully**. A lot of times, the interviewers drop hints in their questions. (Ex: The list is **sorted** which means that you can  do the problem in a time better than O(N log N))
 * Don't: Do not under any circumstances **assume anything** about the question on your own. If you have a doubt, clarify it!
 * Do: **Ask about edge cases!** spend at least 5 minutes clarifying all the edge cases that come to your mind, (What happens if a list is empty?) ** We will discuss a list of edge cases below.
 * Do: Have a **Brute force solution**. Never assume that it's too simple and the interviewer doesn't care about the brute force. The interviewer wants to see that you are capable of coming up with different solutions and iterate on it to make it better!
 * Don't: **Keep quiet during the interview**. Even if you need time to think let the interviewer know.
-* Do: **Communicate what you are thinking!** It is very important to keep talking during the interview. Let the interviewer know what your approach is and what you plan to do next. I cannot iterate how important this point is.
-* Do: Let the **interviewer know if you cannot solve the problem**. Usually, you know within 10-15 minutes if you can solve the problem. It's important to let the interviewer know so that he/she can give you a hint, or give you another question! [You might face some interviewers who want to see you struggle: screw them. A good interviewer wants to help you out so believe that.]
-* Do: This is extremely important and cannot be stated enough. **Have questions for the interviewer at the end**. No Matter how you did, have good questions that you have researched about them or have great questions about the company! This really-really shows your interest.[Questions to ask interviewers](https://github.com/yangshun/tech-interview-handbook/blob/master/contents/questions-to-ask.md)
+* Do: **Communicate what you are thinking!** It is very important to keep talking during the interview. Let the interviewer know what your approach is and what you plan to do next. I cannot iterate how vital this point is.
+* Do: Let the **interviewer know if you cannot solve the problem**. Usually, you know within 10-15 minutes if you can solve the problem. It's essential to let the interviewer know so that he/she can give you a hint, or give you another question! [You might face some interviewers who want to see you struggle: screw them. A good interviewer wants to help you out, so believe that.]
+* Do: This is extremely important and cannot be stated enough. **Have questions for the interviewer at the end**. No Matter how you did, have questions that you have researched about them, or have great questions about the company! This really-really shows your interest.[Questions to ask interviewers](https://github.com/yangshun/tech-interview-handbook/blob/master/contents/questions-to-ask.md)
 
-Some of these things might not be as highly ranked as solving the problem but we want to be able to control every aspect of the interview including impressions and leave nothing up to randomness.
+Some of these things might not be as highly ranked as solving the problem, but we want to be able to control every aspect of the interview, including impressions and leave nothing up to randomness.
 
 ### Some Edge Cases For Questions
 
@@ -145,7 +145,7 @@ Some of these things might not be as highly ranked as solving the problem but we
 
 **Number Questions** - If the number is: 0, negative, infinite, floating-point, huge values, smallest values, NaN.
 
-**Array Questions** - If list is empty, null. Can the array wrap around? Worry about [Time-amortization](http://anh.cs.luc.edu/363/notes/06A_Amortizing.html) -- Dynamic Arrays take O(N) time to insert when array size has been reached and therefore capacity must be doubled.
+**Array Questions** - If list is empty, null. Can the array wrap around? Worry about [Time-amortization](http://anh.cs.luc.edu/363/notes/06A_Amortizing.html) -- Dynamic Arrays take O(N) time to insert when array size has been reached, and therefore capacity must be doubled.
 
 **Other DS** - Null, Head/Root does not exist.
 
@@ -154,23 +154,23 @@ Some of these things might not be as highly ranked as solving the problem but we
 
 ## Practicing for the interview
 
-Now, that you have a way to prepare for the behavioral and technical interviews, it's time to practice them. 
+Now that you have a way to prepare for the behavioral and technical interviews, it's time to practice them. 
 
-Mock interviews are probably the most important aspect of interview prep. Getting used to the nerves during the interview isn't easy. It isn't easy to just go up there and start talking. It takes practice because **INTERVIEWING IS A SKILL**.
+Mock interviews are probably the most critical aspect of interview prep. Getting used to the nerves during the interview isn't easy. It isn't easy to just go up there and start talking. It takes practice because **INTERVIEWING IS A SKILL**.
 
 * [Pramp](www.pramp.com): Practice Mock Interviews with peers for free.
 * [interviewing.io](https://interviewing.io/): Practice Anonymous interviews.
 
-* [ME](mailto:gautamtata.blog@gmail.com): Email me (Buy me a coffee) and I'd be happy to help to chat about interviewing or even conducting mock interviews -- In-person and Remote :)
+* [ME](mailto:gautamtata.blog@gmail.com): Email me (Buy me a coffee), and I'd be happy to help to chat about interviewing or even conducting mock interviews -- In-person and Remote :)
 
 
 ## Conlusion
 
-Preparing for Interviews is tough. I know, I failed dozens of interviews and prepared for 7 months day in and day out after I graduated college before I joined Salesforce. I realized that Interviewing is a skill that needs to be mastered.
+Preparing for Interviews is tough. I know, I failed dozens of interviews and prepared for seven months day in and day out after I graduated college before I joined Salesforce. I realized that Interviewing is a skill that needs to be mastered.
 
-It's easy to feel nervous right now but trust me, it's a numbers game. Keep interviewing, keep practicing and block all other noise out. It doesn't matter what people say, what family says: You are good enough to work here. All it takes is a lot of practice and a bit of luck.
+It's easy to feel nervous right now, but trust me, it's a numbers game. Keep interviewing, keep practicing, and block all other noise out. It doesn't matter what people say, what family says: You are good enough to work here. All it takes is a lot of practice and a bit of luck.
 
-I'd love to hear about any job updates or if I can help in any way so please reach out at [My Email](mailto:gautamtata.blog@gmail.com).
+I'd love to hear about any job updates, or if I can help in any way so, please reach out at [My Email](mailto:gautamtata.blog@gmail.com).
 
 The last part of the series covers Negotiation. See you there!
 
@@ -180,7 +180,7 @@ The last part of the series covers Negotiation. See you there!
 
 * [Awesome Interview Questions](https://github.com/MaximAbramchuck/awesome-interview-questions/blob/master/README.md)
 
-* [30-minute guide to rocking your next coding interview](https://www.freecodecamp.org/news/coding-interviews-for-dummies-5e048933b82b/)
+* [30-minute Guide to rocking your next coding interview](https://www.freecodecamp.org/news/coding-interviews-for-dummies-5e048933b82b/)
 
 * [Behavioral Interview for SWE](https://www.byte-by-byte.com/behavioral-interviews/)
 
