--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -22,7 +22,7 @@ discussLinkHN: https://news.ycombinator.com/item?id=20064900
 ---
 ![Negotiation](https://github.com/gautamtata/blog/blob/master/static/media/tech4.png?raw=true)
 
-Congratulations on getting the offer(s)! You may think that you've done the heavy-lifting, you've slogged through interviews and the hardest part is done. While that may be true for some, for most people **compensation** is a really important factor when it comes to deciding on which job they want to take.
+Congratulations on getting the offer(s)! You may think that you've done the heavy-lifting, you've slogged through interviews, and the hardest part is done. While that may be true for some, for most people, **compensation** is a significant factor when it comes to deciding on which job they want to take.
 
 In this article, we will discuss a breakdown of a compensation package and then talk about the rules of negotiation.
 
@@ -34,45 +34,45 @@ In this article, we will discuss a breakdown of a compensation package and then 
 
 ## Base Salary
 
-The base salary is the fixed amount of money that the company gives you every month for coming in to work. This is a **fixed** number and does not depend on your or your company's performance.
+The base salary is the fixed amount of money that the company gives you every month for coming in to work. It is a **fixed** number and does not depend on your or your company's performance.
 
 The base salary you get depends on which type of company it is: startup or established.
 
-Startups usually give you a higher base-salary because their stock doesn't mean shit. You're taking a gamble on your stock being profitable in the future with a company that might fail and therefore you get a higher base.
+Startups usually give you a higher base-salary because their stock doesn't mean shit. You're taking a gamble on your stock being profitable in the future with a company that might fail, and therefore you get a higher base.
 
 Interns: A base salary of *4-6K* can be expected in most companies.
 
 New Grads: The 2020 base salaries are starting at a more competitive range of *USD 120,000 - 150,000 annually.*
 
-It's a common misconception to think that the higher up the chain you go the more your base salary increases. This is not true. While your salary grow for a couple of years, after you become a senior engineer/lead/manager, you get more equity as you're expected to lead your peers which increases your total compensation.
+It's a common misconception to think that the higher up the chain you go, the more your base salary increases. This is not true. While your salary grows for a couple of years, after you become a senior engineer/lead/manager, you get more equity as you're expected to lead your peers, which increases your total compensation.
 
-*Companies that have more money like Netflix, Google, Facebook, etc are capable of offering more money if have competing offers.*
+*Companies that have more money like Netflix, Google, Facebook, etc. are capable of offering more money if you have competing offers.*
 
 ## Sign-on bonus
 
-This is a one-time payment that you get paid when you join the company. Most companies start with a base sign-on of 10,000 dollars but it can go upto $50,000
+A one-time payment that you get paid when you join the company. Most companies start with a base sign-on of 10,000 dollars, but it can go up to $50,000
 
 Most companies have a clause in the contract that if **you leave before the one-year mark you need to return prorated amount.**
 
-Another thing to remember is that bonuses are taxed on the highest bracket: Around 40-45%. Therefore, if you receive a single-sign-on bonus of $20,000 expect to receive around 13K.
+Another thing to remember is that bonuses are taxed on the highest bracket: Around 40-45%. Therefore, if you receive a single-sign-on bonus of $20,000, expect to earn around 13K.
 
 ## Equity/Stocks
 
-The difference between tech companies and non-tech companies is equity. Tech workers get a share in the company; which is to motivate employees to work in the best interest of the company and it's something that can be a huge chunk of the total compensation.
+The difference between tech companies and non-tech companies is equity. Tech workers get a share in the company, which is to motivate employees to work in the best interest of the company, and it's something that can be a massive chunk of the total compensation.
 
-You can usually vest equity (When the whole amount is available to you) typically over **4 years.** Most companies have what's called a **One-Year cliff** which means that you won't have any stocks available to you until the end of 1 year but then you will get your shares on a prorated basis of 1 month at a time for 3 years.
+You can usually vest equity (When the whole amount is available to you) typically over **4 years.** Most companies have what's called a **One-Year cliff**, which means that you won't have any stocks available to you until the end of 1 year, but then you will get your shares on a prorated basis of 1 month at a time for three years.
 
-Stocks have value when they are publically avaiable. If a company has an [Initial Public Offering (IPO)](https://www.investopedia.com/terms/i/ipo.asp) their stocks have value. Startups will usually provide you with insane amounts of equity but they don't mean much until they IPO. So think about what you are getting into!
+Stocks have value when they are publically available. If a company has an [Initial Public Offering (IPO)](https://www.investopedia.com/terms/i/ipo.asp), its shares have value. Startups will usually provide you with insane amounts of equity, but they don't mean much until they IPO. So think about what you are getting into!
 
-Stocks can be granted in any number for a new-grad: 50K - 400K over 4 years depending on your negotiation power.
+Stocks can be granted in any number for a new-grad: 50K - 400K over four years, depending on your negotiation power.
 
 ### Employee Stock Options
 
-[Employee Stock Options--ESOs](https://www.investopedia.com/terms/e/eso.asp) are usually given at mid-sized companies. They are different from the equity we discussed above ([Restricted Stock Unit--RSUs](https://www.investopedia.com/terms/r/restricted-stock-unit.asp)) which are given to you. Stock options are different in the sense that you have to purchase them. You are also permitted to purchase a limited number of stock but the good news is that you can purchase them at a **Strike Price** which is a price much lower than what the current-valuation of 1 stock is.
+[Employee Stock Options--ESOs](https://www.investopedia.com/terms/e/eso.asp) are usually given at mid-sized companies. They are different from the equity we discussed above ([Restricted Stock Unit--RSUs](https://www.investopedia.com/terms/r/restricted-stock-unit.asp)) which are provided to you. Stock options are different in the sense that you have to purchase them. You are also permitted to purchase a limited number of shares, but the good news is that you can buy them at a **Strike Price**, which is a price much lower than what the current-valuation of 1 stock is.
 
- *The greatest benefits of a stock option are realized if a company's stock rises above the exercise price. Typically, ESOs are issued by the company and cannot be sold, unlike standard listed or exchange-traded options. When a stock’s price rises above the call option exercise price, call options are exercised and the holder obtains the company’s stock at a discount. The holder may choose to immediately sell the stock in the open market for a profit or hold onto the stock over time.*
+ *The most significant benefits of a stock option are realized if a company's stock rises above the exercise price. Typically, ESOs are issued by the company and cannot be sold, unlike standard listed or exchange-traded options. When a stock's price rises above the call option exercise price, call options are exercised, and the holder obtains the company's shares at a discount. The holder may choose to immediately sell the stock in the open market for a profit or hold onto the stock over time.*
 
-Example: If Company X gives you the purchasing power of 2000 stocks at a strike price of 10 dollars per stock at a valuation of 20 dollars per stock then you are essentially doubling your money.
+Example: If Company X gives you the purchasing power of 2000 stocks at a strike price of 10 dollars per share at a valuation of 20 dollars per stock, then you are essentially doubling your money.
 
 Value of 2000 stocks = 2000*20 = 40,000
 
@@ -80,11 +80,11 @@ Value of 2000 stocks at strike price = 2000*10 = 20,000
 
 Profit = 40000-20000 = $20,000
 
-**When you leave a company you are given a time-frame to exercise your stock options. It's very important to have cash-on-hand to purchase these stocks**
+**When you leave a company, you are given a time-frame to exercise your stock options. It's imperative to have cash-on-hand to purchase these stocks**
 
 ### Perks And Benefits
 
-While these perks are not exactly cash, they can help you save money and are also targeted at making your life easier. Some of those perks are:
+While these perks are not cash, they can help you save money and are also targeted at making your life easier. Some of those perks are:
 
 * Free Lunches/Dinner
 * 401K Matching
@@ -99,7 +99,7 @@ While these perks are not exactly cash, they can help you save money and are als
 
 Most points are extracted and paraphrased from "Ten Rules for Negotiating a Job Offer" [Part 1](http://haseebq.com/my-ten-rules-for-negotiating-a-job-offer/) and [Part 2](https://haseebq.com/how-not-to-bomb-your-offer-negotiation/) by Haseeb Qureshi.
 
-Now that you've understood everything about compensation, it's time to dive into how to negotiate your compensation. This can be base salary, equity or even PTO.
+Now that you've understood everything about compensation, it's time to dive into how to negotiate your compensation. This can be base salary, equity, or even PTO.
 
 
 ### Rule 1: Get Everything In Writing
@@ -109,20 +109,20 @@ Have everything written down as it might be helpful later. Even if the recruiter
 Write everything down even if it doesn't have direct monetary value:
 
 * We work with Python, Spark and Scala: Write that down!
-* We offer 4 weeks PTO and 1 year maternal/paternal leave: Write that down!
-* We cover your phone bill and offer 200$ for wellness: You guessed it, Write that down!
+* We offer four weeks PTO and one year maternal/paternal leave: Write that down!
+* We cover your phone bill and provide 200$ for wellness: You guessed it, Write that down!
 
-The goal is not only if the recruiter forgets but also for you to make your decision in the end. You will want to make pro's and con's so this list will help you decide!
+The goal is not only if the recruiter forgets but also for you to make your decision in the end. You will want to create pro's and con's so this list will help you decide!
 
 ### Rule 2: Always Keep The Door Open
 
-Now that you have the offer, the ball is in your court. The company has spent hundreds of offers and thousands of dollars to give you this offer. THEY WANT YOU! So, do not give up negotiation power until you are ready to make an informed final decision.
+Now that you have the offer, the ball is in your court. The company has spent hundreds of hours and thousands of dollars on giving you this offer. THEY WANT YOU! So, do not give up negotiation power until you are ready to make an informed final decision.
 
 Very often, recruiters will try to trick you into accepting an offer. They might say something along the lines of 
 
-> "We're very happy to extend you an offer! Here are the details of your compensation! What do you think? Can you give me your decision?"
+> "We're delighted to extend you an offer! Here are the details of your compensation! What do you think? Can you give me your decision?"
 
-> "We're very happy to extend you an offer! Here are the details of your compensation! What do you think? This offer is the best we can do and the hiring manager needs a decision asap to start your onboarding process"
+> "We're thrilled to extend you an offer! Here are the details of your compensation! What do you think? This offer is the best we can do, and the hiring manager needs a decision asap to start your onboarding process."
 
 This is the time you shouldn't panic. Just remember, they want you! They won't lose you just because you asked for more time unless it's an **exploding offer**.
 
@@ -133,17 +133,17 @@ You need to have some backup lines ready to push the recruiter off and make a de
 Keep the mystery in the negotiation. The information you have with you is a powerful tool.
 Try to give out as little information as possible.
 
-When a recruiter initially gives you an offer: do not comment on the offer, do not try to negotiate the salary or reveal which companies are currently in your pipeline. You could currently be interviewing for a company that you want to work for or have another offer in mind. Recruiters will do their best to squeeze these details out of you. They'll try to ask what your current compensation is or what other offers you have. **Be mindful of this and protect your information as much as possible.**
+When a recruiter initially gives you an offer: do not comment on the offer; do not try to negotiate the salary or reveal which companies are currently in your pipeline. You could currently be interviewing for a company that you want to work for or have another offer in mind. Recruiters will do their best to squeeze these details out of you. They'll try to ask what your current compensation is or what other offers you have. **Be mindful of this and protect your information as much as possible.**
 
 A sample dialogue of what you can say when you are pressed for details:
 
-> "Yeah, [COMPANY_NAME] sounds great! I thought this was a good fit, and I'm glad that you guys agree. Right now I'm talking with a few other companies so I can't speak to the specific details of the offer until I'm done with the process and get closer to making a decision. But I'm sure we'll be able to find a package that we're both happy with because I really would love to be a part of the team."
+> "Yeah, [COMPANY_NAME] sounds great! I thought this was a good fit, and I'm glad that you guys agree. Right now, I'm talking with a few other companies, so I can't speak to the specific details of the offer until I'm done with the process and get closer to making a decision. But I'm sure we'll be able to find a package that we're both happy with because I really would love to be a part of the team."
 
 ### Rule 4: Have a positive attitude
 
-Even if the offer is bad or it's not the company you want to work for, it is extremely important to **stay positive and enthusiastic** about the offer you have received. Believe it or not, your excitement for the company is a valuable asset.
+Even if the offer is bad or it's not the company you want to work for, it is important to **stay positive and enthusiastic** about the offer you have received. Believe it or not, your excitement for the company is a valuable asset.
 
-No matter where you are in the negotiation make sure that the impression you give is:
+No matter where you are in the negotiation, make sure that the impression you give is:
 * You LOVE the company and everything they do
 * You're excited to start working there
 * Compensation is not the biggest hurdle for you to work there.
@@ -152,11 +152,11 @@ The way you can do this is by showing passion for the mission of the company, th
 
 A sample dialogue for that: 
 
-> "Hey [Recruiter Name], thanks for reaching out to me. I have been interested in [Company Name] for a while now and love the [Problem_Space] that the engineering team is working towards. For me, compensation is not a huge hurdle to work at your company but I'll need a day or two to look over the offer and I'll have the decision ready for you as soon as possible"
+> "Hey [Recruiter Name], thanks for reaching out to me. I have been interested in [Company Name] for a while now and love the [Problem_Space] that the engineering team is working towards. For me, compensation is not a huge hurdle to work at your company, but I'll need a day or two to look over the offer, and I'll have the decision ready for you as soon as possible."
 
 ### Rule 5: Don't Be The Decision Maker
 
-Your friends/family might already be happy with the offer you have or you don't care what they think about your offer. But, by mentioning your significant other/parents/siblings the recruiter has multiple people they need to win over. They realize that there is no point in trying to trick you into making a decision. The TRUE DECISION MAKER is beyond their reach. This allows you to defuse the tension and buy you more time to make an informed decision.
+Your friends/family might already be happy with the offer you have, or you don't care what they think about your offer. But, by mentioning your significant other/parents/siblings, the recruiter has multiple people they need to win over. They realize that there is no point in trying to trick you into making a decision. The TRUE DECISION MAKER is beyond their reach. This allows you to defuse the tension and buy you more time to make an informed decision.
 
 A sample dialogue for that: 
 
@@ -166,36 +166,36 @@ It's much harder to pressure someone if they're not the final decision-maker. So
 
 ### Rule 6: Have Alternatives
 
-If you have multiple offers, you have leverage. The recruiters know that they are not the only people interested in you so you can use offers to negotiate and increase compensation with all parties involved. 
+If you have multiple offers, you have leverage. The recruiters know that they are not the only people interested in you, so you can use offers to negotiate and increase compensation with all parties involved. 
 
-You should proactively reach out to the other companies in your pipeline. If you are in the initial stages of interviewing with a company let them know that you have received an offer(s) and to expedite the interview process. If you have other offers, let them know that you have gotten a competing offer and schedule a chat with the recruiter. Build a sense of urgency. All offers have an expiration date so take advantage of that.
+You should proactively reach out to the other companies in your pipeline. If you are in the initial stages of interviewing with a company, let them know that you have received an offer(s) and to expedite the interview process. If you have other offers, let them know that you have gotten a competing offer and schedule a chat with the recruiter. Build a sense of urgency. All offers have an expiration date, so take advantage of that.
 
 
 > Hello [PERSON],
 >
-> I just wanted to update you on my process. I've just received an offer from [COMPANY] which is quite strong. That said, I'm excited about [YOUR AMAZING COMPANY] and want to see if we can make it work. Since my timeline is now compressed, is there anything you can do to expedite the process?
+> I just wanted to update you on my process. I've just received an offer from [COMPANY], which is quite strong. That said, I'm excited about [YOUR AMAZING COMPANY] and want to see if we can make it work. Since my timeline is now compressed, is there anything you can do to expedite the process?
 
-The big question here is: Should I mention the name of the company from which I have an offer? That depends on which company it is. Companies want to snag you before other big companies or their competitors get their hands on you. So if it's a **Sexy** name, drop it. If it's a **direct competitor**, drop the name.
+The big question here is: Should I mention the name of the company from which I have an offer? That depends on which company it is. Companies want to snag you before other big companies, or their competitors get their hands on you. So if it's a **Sexy** name, drop it. If it's a **direct competitor**, drop the name.
 
 Ex: If you are talking to a recruiter from Uber and you have an offer from Lyft, definitely mention it. The same goes for if you have an offer from Box and another from DropBox.
 
 Even if the companies are not direct competitors but are big tech companies, mention their names.
-If it's a no-name, small startup, etc there is no point mentioning this. Just say that you have an offer from them and it is expiring on this date.
+If it's a no-name, small startup, etc. there is no point mentioning this. Just say that you have an offer from them and it is expiring on this date.
 
-Companies know the interview process in other companies and they also know how easy it is to weed people out. Candidates who have multiple offers signal that they have what it takes to pass multiple rounds of interviews and multiple companies and it works in the candidate's favor.
+Companies know the interview process in other companies, and they also know how easy it is to weed people out. Candidates who have multiple offers signal that they have what it takes to pass multiple rounds of interviews and numerous companies, and it works in the candidate's favor.
 
 Tell other companies that you've received offers. Give them more signals so that they know you're a valued and compelling candidate. And understand why this changes their mind about whether to interview you.
 
 Your goal should be to have as many offers overlapping at the same time as possible. This will maximize your window for negotiating.
 
 
-> I 've received another offer from [OTHER CORP] that's very compelling on salary, but I love the mission of [YOUR COMPANY] and think that it would overall be a better fit for me.
+> I've received another offer from [OTHER CORP] that's very compelling on salary, but I love the mission of [YOUR COMPANY] and think that it would overall be a better fit for me.
 
-> I'm also considering going back to grad school and getting a Master's degree in [Something]. I'm excited about [YOUR COMPANY] though and would love to join the team, but the package has to make sense if I'm going to forego a life of [Something].
+> I'm also considering going back to grad school and getting a Master's degree in [something]. I'm excited about [YOUR COMPANY], though, and would love to join the team, but the package has to make sense if I'm going to forego a life of [something].
 
 ### Rule 7: Have Reasons For Everything
 
-State a reason (any reason) that makes your request feel important. It doesn't mean that you are greedy but it's just that you are trying to achieve your goals.
+State a reason (any reason) that makes your request feel important. It doesn't mean that you are greedy, but it's just that you are trying to achieve your goals.
 
 Try to give more sympathetic reasons:
 * Medical bills
@@ -203,34 +203,34 @@ Try to give more sympathetic reasons:
 * Children to take care of.
 * Parents to take care of.
 
-Just have a reason for everything and the recruiter is more than likely to oblige to your requests.
+Just have a reason for everything, and the recruiter is more than likely to oblige to your requests.
 
 
 ### Rule 8: Be Motivated By More Than Just Money
-This might seem either obvious or hard depending on who you are. Remember that most offers will differentiate at most 20-30K. While this is a lot of money, in your long term career in tech this is peanuts. 
+This might seem either obvious or hard, depending on who you are. Remember that most offers will differentiate at most 20-30K. While this is a lot of money, in your long term career in tech, this is peanuts. 
 
 Try to prioritize the following:
 * What the company does; Are you interested in Self-driving? Then pick a company that lets you do machine learning instead of a higher paying backend role.
-* How good is the manager? The manager will be a mentor during the time that you will be at the company so it's important to be a good judge for that.
-* Do you like the company or you want to join it because it's a brand name?
+* How good is the manager? The manager will be a mentor during the time that you will be at the company, so it's important to be a good judge for that.
+* Do you like the company, or you want to join it because it's a brand name?
 
-If you are going to be unhappy at the company then it's not good for you and the company. So, it's best to make a hard decision early on.
+If you are going to be unhappy at the company, then it's not good for you or the company. So, it's best to make a hard decision early on.
 
 
 ### Rule 8: Show belief in your talent 
 
 This goes to more than giving the company that you like that. (Which is something you should keep doing as discussed earlier.) More than that, you should know your worth and have belief in what you can bring to the table.
 
-Don't play any games. Just be straight to the point, be clear with your preferences and keep mentioning your time.
+Don't play any games. Just be straight to the point, be clear with your preferences, and keep mentioning your time.
 
 If you are not going to work for a company, politely let them know.
 
 
 ## Conclusion
 
-Thank you for making it this far. I know it was a long read but I hope that I could help get you an insight into the process. This is the end of the series on [How To Get A Job In Tech](/series/how-to-get-a-job-in-tech). If you liked it, let me know [My Email](mailto:gautamtata.blog@gmail.com) or you can buy me a coffee at paypal.me/GautamTata 
+Thank you for making it this far. I know it was a long read, but I hope that I could help get you an insight into the process. This is the end of the series on [How To Get A Job In Tech](/series/how-to-get-a-job-in-tech). If you liked it, let me know [My Email](mailto:gautamtata.blog@gmail.com), or you can buy me a coffee at paypal.me/GautamTata 
 
-I look forward to seeing you in other series about climate change, Machine learning or random-stuff! Thanks for reading.
+I look forward to seeing you in other series about climate change, Machine learning, or random-stuff! Thanks for reading.
 
 Gautam
 
