--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -24,15 +24,15 @@ discussLinkHN: https://news.ycombinator.com/item?id=20524543
 ![work from home](https://github.com/gautamtata/blog/blob/master/static/media/tech1.jpeg?raw=true)
 
 ## Introduction
-This is a follow-up article that demonstrates the **RIGHT** way to apply for jobs.
+In this article, we will talk about the **RIGHT** way to apply for jobs.
 
-**NOTE: Some of these methods might be socially unacceptable and therefore you should do what YOU feel is right.**
+**NOTE: Some of these methods might be socially unacceptable, and therefore you should do what YOU feel is right.**
 
-Now that you have that awesome resume, let's talk about what are the different ways you can apply for jobs.
+Now that you have that impressive resume let's talk about what are the different ways you can apply for jobs.
 
-In this article, I'm going to start with my statistics for how many jobs I applied to, how many interviews I got and the means I used to get those interviews.
+In this article, I'm going to start with my statistics for how many jobs I applied to, how many interviews I got, and the means I used to get those interviews.
 
-Next we will move onto what methods we can use to apply to jobs.
+Next, we will move onto what methods we can use to apply to jobs.
 
 ## Table of Contents
 
@@ -64,9 +64,9 @@ Next we will move onto what methods we can use to apply to jobs.
 
 As you can see, an incredible percentage **(~72%)** of my interviews were from cold-emails or from walking into companies. Only a disappointing **15%** interviews were from online applications.
 
-Overall, I converted my application into interviews approximately **1/4 times** so, 1 interview for every 4 rejected.
+Overall, I converted my application into interviews approximately *1/4 times* so, one interview for every four rejected.
 
-An important thing to note: All of these interviews are over 7 months. Many variables are affecting these numbers: Continuous iteration of my resume over some time, peaks and valleys in hiring, etc.
+An important thing to note: All of these interviews are over *seven months.* Many variables are affecting these numbers: Continuous iteration of my resume over some time, peaks and valleys in hiring, etc.
 
 But the overwhelming statistic here is that Cold-emailing and walking into companies got me my interviews.
 
@@ -74,44 +74,44 @@ But the overwhelming statistic here is that Cold-emailing and walking into compa
 # Methods to Apply for Jobs
 
 ## Employee Referral
-This is by far the easiest way to get your resume directly read by a recruiter or even an engineering manager!
+The easiest way to get your resume directly read by a recruiter or an engineering manager is by using an employee referral.
 
-The referral almost guarantees that your resume will at least be read by a human. So if you can get one of those valuable referrals go get em!
+The referral almost guarantees that a human will read your resume. So if you can get one of those valuable referrals: Go get em!
 
 ### Tips for getting employee referrals
 
-Squeeze your networks (Extremely shamelessly - Cannot say this enough): For many people, reaching out to your friends, alumni, professors, classmates for referrals might be embarrassing. Trust me it was for me!. 
+Squeeze your networks (Extremely shamelessly - Cannot say this enough): For many people, reaching out to your friends, alumni, professors, classmates for referrals might be embarrassing. Trust me; it was for me!. 
 
-But the other point to think here is that it is YOUR JOB/A CAREER YOU ARE INTERESTED IN! The reality is that most people are always ready to help. The other reason they will help you is that Valley Companies often give very high referral bonuses if you get hired (5-10k!) so people are usually incentivized to give you a referral. The other thing to remember is that this is not a huge hassle. It usually takes <2 mins and 1 click of a button.
+But the other point to think here is that it is YOUR JOB/A CAREER YOU ARE INTERESTED IN! The reality is that most people are always ready to help. The other reason they will help you is that Valley Companies often give very high referral bonuses if you get hired (5-10k!), so people are incentivized to provide you with a referral. The other thing to remember is that this is not a huge hassle. It usually takes <2 mins and one click of a button.
 
-Below I have attached samples of 2 emails that I used to ask for referrals. 1 is with a classmate who works at Atalassian and the other is with my professor who has tons of contacts in the valley. For my professor, I just browsed his LinkedIn contacts made a spreadsheet of people I would like an introduction to. For some he did for most he didn't. I got an interview at VISA and Apple this way.
+Below I have attached samples of 2 emails that I used to ask for referrals. One is with a classmate who works at Atlassian, and the other is with my professor, who has tons of contacts in the valley. For my professor, I just browsed his LinkedIn contacts made a spreadsheet of people I would like an introduction to. For some, he did for most he didn't. I got an interview at VISA and Apple this way.
 
 
 **Friend/Aquaintance**
 
-```
+`"
 Hey, Person, I know from School,
 I hope you're doing well. I think we may have crossed paths in one of our classes.
 
 I saw on LinkedIn that you're working at Atlassian. Congrats! 
 I hope the job's been treating you well.
 
-I'd greatly appreciate a chance to chat about how to effectively approach applying to companies. I've already 
+I'd greatly appreciate a chance to chat about how to approach applying to companies effectively. I've already 
 applied quite a few companies, but haven't heard back.
 
 Do you have 20 mins sometime next week, say Tuesday, 
-June 25th, at 10am for a phone call? 
+June 25th, at 10 am, for a phone call? 
 
 A bit more about me:
 --------------------------
 I'm a full-stack engineer that just graduated from 
 CSU Monterey Bay (California) with a degree in Computer 
 Science. I've built and shipped products that have users.
-I obsess over user experience and I do whatever it takes 
+I obsess over user experience, and I do whatever it takes 
 to deliver reliable, useful software.
 
-Out of my projects, I’m most proud of the work that I’ve
-done for the Pacific Grove Museum, to help researchers … 
+Out of my projects, I'm most proud of the work that I've
+done for the Pacific Grove Museum, to help researchers (do something).
 
 1 min video in which I explain and walk through the project: 
 Codebase: 
@@ -123,22 +123,21 @@ Portfolio
 resume
 --------------------------
 
-Once again, I would greatly appreciate any help/advice 
-you may have. I look forward to hearing back. 
+Once again, I would greatly appreciate any help/advice you may have. I look forward to hearing back. 
 
 Regards,
 Gautam Tata,
 ph: (925) 405-7741
 w: www.gautamtata.com
-```
+`"
 **Professor**
-```
+`"
 Hi, Professor who I know has a ton of contacts,
 
 I hope you've been well. Thanks for a great capstone and an 
-amazing senior year!
+Amazing senior year!
 
-I'd greatly, greatly appreciate your help in the following
+I'd greatly appreciate your help in the following
 ways, if possible:
 
 1. Could you introduce me to people you know at Tech companies 
@@ -146,24 +145,23 @@ in the United States so that I can demonstrate to them what
 I can bring it to their teams? I've already compiled this sheet
 in which I listed all of your contacts that I found on 
 LinkedIn, who I'd like to connect with. For each person you are willing to introduce me to, I will draft up a 
-tailored email targeted to that person, in which I share a summary of the work that I've done, and ask them for a
-chance to chat about open roles and for a chance to demonstrate
-what I can bring to their teams. Then, you can simply forward that email asking if they're OK with a connection and if yes, you can just CC me on that email thread. 
+tailored email targeted to that person. The email will include a summary of the work that I've done, and ask them for a
+chance to chat about open roles and for an opportunity to demonstrate
+what I can bring to their teams. Then, you can simply forward that email asking if they're okay with a connection and if yes, you can just CC me on that email thread. 
 
-2. Could you please provide feedback on the blurb I've included below? This is the main piece in my outreach to companies. I've tried to make it as clear as possible 
-what I can do. Unfortunately I haven't had much luck 
-applying to companies online or directly reaching 
-out to engineering managers/recruiters at companies. 
+2. Could you please provide feedback on the blurb I've included below? My 'about me' is the central piece in my outreach to companies. I've tried to make it as clear as possible 
+what I can do. Unfortunately, I haven't had much luck applying to companies online or directly reaching out 
+to engineering managers/recruiters at companies. 
 I would appreciate any advice you may have.
 
 ------------------------
 About me:
 I'm a full-stack engineer that just graduated from CSU Monterey Bay
 with a degree in Computer Science. I've built and shipped products 
-that have users. I obsess over user experience and I do whatever 
+that have users. I obsess over user experience, and I do whatever 
 it takes to deliver reliable, useful software.
 
-Out of my projects, I’m most proud of the web application 
+Out of my projects, I'm most proud of the web application 
 I built for the Pacific Grove Museum, to help researchers 
 effectively communicate the effects of climate change on 
 the local water ecosystem - to the local community. 
@@ -188,44 +186,44 @@ Gautam Tata,
 ph: 
 
 w: www.gautamtata.com
-```
+`"
 
-The other method you can use for a referral is to use [teamBlind](https://www.teamblind.com/post/How-do-you-ask-for-referrals-E5FCfr8Q). People there usually post for referrals and are usually slammed by most people but you only need that 1-2 to click! Just write a nice message and I'm sure something will click.
+The other method you can use for a referral is to use [teamBlind](https://www.teamblind.com/post/How-do-you-ask-for-referrals-E5FCfr8Q). People there usually post for referrals and are often slammed by most people, but you only need that 1-2 to click! Just write a nice message, and I'm sure something will click.
 
-Another way is using [Rooftop Slushie](https://www.rooftopslushie.com/) where you can set some amount of money for employees to give you referrals. This is also another popular method.
+Another way is using [Rooftop Slushie](https://www.rooftopslushie.com/), where you can set some amount of money for employees to give you referrals.
 
-Note: I have never used the methods but have seen it happen so use it at your benefit.
+Note: I have never used the methods but have seen it happen, so use it at your benefit.
 ## The art of cold-emailing
-Here's the big one. For the next two methods, which is cold emailing and walking into companies, A lot of people don't use it out of fear and others don't because they think its socially unacceptable. Again, I just want to reiterate: Use it at your benefit.
+Here's the big one. For the next two methods, which is cold emailing and walking into companies, A lot of people don't use it out of fear, and others don't because they think its socially unacceptable. Again, I just want to reiterate: Use it at your benefit.
 
-Now, let us say that you have no friends/professors from whom you can ask for referrals. Or let's say that you've milked your contacts and still no luck.No worries, you have officially used what you can say "the tip of the iceberg". 
+Now, let us say that you have no friends/professors from whom you can ask for referrals. Or let's say that you've milked your contacts and still no luck.No worries, you have officially used what you can say "the tip of the iceberg." 
 
-You know have access to 1000's if not 10's of thousands of employees who work at places you want to work. This is the next step. You want to cold email the people who work at these companies and try to impress them. Impress them enough that they directly give you an interview or in some circumstances: straight offers.
+You now have access to 1000's if not 10's of thousands of employees who work at places you want to work. The next step is to cold email the people who work at these companies and try to impress them. Impress them enough that they directly give you an interview or in some circumstances: straight offers.
 
 **Who to Email**: The people in power. The people who can either get you an interview directly or the people who can hand your resume to get you an interview.
 
 **Who are those people**: Those people are the Engineering managers or the Engineers working on the team.
 
-**WHY?**: If an Engineer or Engineering Manager wants you on their team they can make things happen! They can skip steps, get you ahead of the line, etc. Usually everyone is spamming the recruiters so the odds that they get back to you are slim.
+**WHY?**: If an Engineer or Engineering Manager wants you on their team, they can make things happen! They can skip steps, get you ahead of the line, etc. Usually, everyone is spamming the recruiters, so the odds that they get back to you are slim.
 
 TOOLS THAT YOU NEED TO USE:
 1. [LinkedIn](https://www.linkedin.com): Use this to find the names of Engineering managers. Click on the company name -> People -> Search Engineering Manager.
 
 2. [hunter.io](https://hunter.io/) && [rocketreach.co](https://rocketreach.co/): Use these tools to find the emails of the managers.
 
-3. [snov.io](https://snov.io/): Use this to track who has opened your email. This is to determine whether or not your emails are being read. Usually a manager who is interested will open your email multiple times and click on different links. All of which can be accessed for free.
+3. [snov.io](https://snov.io/): Use this to track who has opened your email. This is to determine whether or not your emails are being read. Usually, an interested manager will open your email multiple times and click on different links. All of which can be accessed for free.
 
-4. Companies that I got an interview from Quora, 23nMe, VSCO, Apple, Benchling, Mapbox, Zendesk and many more.
+4. Companies that I got an interview from Quora, 23nMe, VSCO, Apple, Benchling, Mapbox, Zendesk, and many more.
 
 Here is a sample of a cold-email that I used: 
-``` 
+`" 
 Hi Engineering Manager,
 
 I'd greatly appreciate a chance to help further 23andme's mission,
  by contributing as a software engineer on your team. 
 
 I'm a full-stack engineer that just graduated from CSU Monterey Bay
-with a degree in Computer Science, and have built a variety of
+with a degree in Computer Science and has built a variety of
 products - a few that have actual users. 
 I obsess over user experience and do whatever it takes to build a 
 the product that delivers value to its users.
@@ -235,7 +233,7 @@ from a friend who brought it up in a conversation about how
 a huge use-case for machine learning is DNA processing and 
 how 23andme is a company that sits on tremendous data and 
 a tremendous opportunity to use it to improve healthcare 
-through prediction - an opportunity I find very exciting.
+through prediction - an opportunity I find inspiring.
 
 I'd greatly appreciate a chance to chat with you about what
 I can bring to the table. Are you available for a 10 min 
@@ -250,18 +248,18 @@ Gautam Tata
 c: (925) 405-7741
 w: gautamtata.com
 
-```
+`"
 
 Another Example
 
-```
+`"
 Dear CEO of Company,
 
-I’d greatly appreciate a chance to further Mapbox’s mission,
+I'd greatly appreciate a chance to further Mapbox's mission,
  by contributing as a software engineer/intern/apprentice on 
  your team.
 
-A little about me: My name is Gautam and I am a recent graduate
+A little about me: My name is Gautam, and I am a recent graduate
 from CSU Monterey Bay. I have experience as a full-stack 
 web developer but something I realized very late is that
 I am crazy about working with Maps, data-viz and geospatial
@@ -272,16 +270,15 @@ opportunities on your team.
 
 I have been learning a lot about working with maps but taking courses on OpenStreetMaps and learning tools like Apache Spark, Hadoop, PostGIS,
 etc. As a reference to what I have learned, I have built an
-application that demonstrates my capability in learning 
-new technologies.  
+application that demonstrates my capability to learn new technologies.  
 
 The project is a visualization of Uber drivers speeding around 
 London/SF schools. I built this by extracting OSM data and 
 processing it using Spark. 
 The link to the codebase: 
-I know this is a lot to ask but I’d greatly appreciate a 
+I know this is a lot to ask, but I'd greatly appreciate a 
 chance to show you what I can bring to the table and if possible,
-I’d love to set up a 10-minute chat to do the same. 
+I'd love to set up a 10-minute chat to do the same. 
 I can be reached at(myemail@gmail.com). 
 I understand that you are busy and
 I can work around your schedule in any way.
@@ -292,55 +289,55 @@ Gautam Tata
 
 (phoneNumber/myemail@gmail.com)
 
-```
+`"
 
-Yes, you read that right. That was the CEO of the company (whom I did get a response from!). The types of people I have cold emailed and gotten a response from are Engineers, Engineering Managers, VP's and CEO.
+Yes, you read that right. That was the CEO of the company (whom I did get a response from!). The types of people I have cold emailed and gotten a response from are Engineers, Engineering Managers, VP's, and CEO.
 
 TIPS FOR COLD EMAIL:
 
-1. Show extreme passion and enthusiasm for their companies! Show that you've read their blog posts or their patents. If you can show that level of enthusiasm for that company, trust me you are going to get that interview.
+1. Show extreme passion and enthusiasm for their companies! Show that you've read their blog posts or their patents. If you can show that level of interest for that company, trust me, you are going to get that interview.
 
-2. WAIT! If you don't get an email back in a day or two don't fret. Even if they leave you on reading. I cannot stress this enough. Its a waiting game and people are busy! (Especially the higher up the chain you go)
+2. WAIT! If you don't get an email back in a day or two, don't fret. Even if they leave you on reading, I cannot stress this enough. Its a waiting game and people are busy! (Especially the higher up the chain you go)
 
 ## Walking into companies
 
-Here is comes. Here is where everyone will tell me how this is unacceptable and why you should not do this. Well for me, this got me the majority of all my interviews so please feel free to skip this section if you cannot go forward with this approach.
+Here is comes. Here is where everyone will tell me how this is unacceptable and why you should not do this. Well, for me, this got me the majority of all my interviews, so please feel free to skip this section if you cannot go forward with this approach.
 
 Having spent all my adult life in the Bay, I've always heard about [The hustle of the bay](https://www.kqed.org/arts/13861451/welcome-back-to-the-hustle-a-series-about-bay-area-artists-and-their-money) and how it is widely respected. I decided to go with the hustle route. A route that a lot of my friends told me is not okay.
 
-So here's how you do it. Grab your resume, make a cover letter for the engineering manager (could be the same as cold email) and just walk inside companies and drop your letter off. **THATS IT**
+So here's how you do it. Grab your resume, make a cover letter for the engineering manager (could be the same as cold email) and just walk inside companies, and drop your letter off. **THATS IT**
 
-Go as far as you can in the company; drop off at the entrance desk; give it straight to the engineer if accessible; whatever you need to do to get it to the right hands.
+Go as far as you can in the company; drop off at the entrance desk; give it straight to the Engineer if accessible; whatever you need to do to get it to the right hands.
 
 **SECONDARY APPROACH**: Mail it. Every Engineer has a mailbox at their company and will have mail delivered to them. Worst case, they open it says a few words and trash it. Best case - They **LOVE** the way you approach things and decide to give you an interview. 
 
-P.S: I got an Uber onsite this way; no-frills, no hackerrank just straight Onsite.
+PS: I got an Uber onsite this way; no-frills, no Hackerrank just straight Onsite.
 
 The list of companies that I got interviews with this way is nothing but incredible.
 
-I urge you to drop any shame and just go get it done. You can thank me later.
+I urge you to drop any shame and just get it done. You can thank me later.
 
 > There isn't just one door to get into a company. There's always a backdoor - Karthik Uppuluri (Hustler)
 
 ## Career Fairs
-Aah, the college career fairs. The hustle-bustle of the students. Huge lines for companies for a few seconds to talk to a recruiter or engineer and impress them enough to interview you.
+Aah, the college career fairs. The hustle-bustle of the students. Huge lines for companies for a few seconds to talk to a recruiter or Engineer and impress them enough to interview you.
 
 Here's the know-how:
 
 1. Have a resume in your hand and be ready.
-2. Have a 30-second elevator pitch: Who you are, what you do and what you're interested in.
-3. Have your phone in hand with the contacts open: Immediately after the conversation ask them for their work email for a follow-up email.
+2. Have a 30-second elevator pitch: Who you are, what you do, and what you're interested in.
+3. Have your phone in hand with the contacts open: Immediately after the conversation, ask them for their work email for a follow-up email.
 4. Know who you are talking to the Recruiter or Engineer. (Usually very easy to spot!)
 If you are talking to a recruiter, know your buzzwords. Mine was React, Machine-learning, TensorFlow, MEAN stack.
-5. If you are talking to an engineer, be ready to explain your past work/projects in detail. You should be ready at any point to talk 30 minutes about your projects.
+5. If you are talking to an engineer, be ready to explain your past work/projects in detail. You should be prepared at any point to talk 30 minutes about your projects.
 6. Stay till the end. Ask if you can help out. They're usually carrying a ton of stuff to their cars and are tired at the end of the day. Use this time to sell yourself. [I got an interview with Plaid this way :)]
 7. Same Day Follow up!
 
 ### A Socially Unacceptable Experiment
 
-I went to a small school in the central valley. The best company that came to my school was In'n'out. So I decided to drive up 2 hours to Berkeley, CA and tried to attend the UC Berkeley Career Fair.
+I went to a small school in the central valley. The best company that came to my School was In'n'out. So I decided to drive up two hours to Berkeley, CA and tried to attend the UC Berkeley Career Fair.
 
-Here are 2 ways that you shouldn't do it:
+Here are two ways that you shouldn't do it:
 
 **DO NOT ACT LIKE YOU BELONG AND TAILGATE OTHER STUDENTS INSIDE THE VENUE JUST BECAUSE THE PEOPLE WHO ARE CHECKING ID'S ARE STUDENTS AND DON'T CARE**
 
