--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -89,104 +89,11 @@ Below I have attached samples of 2 emails that I used to ask for referrals. One 
 
 **Friend/Aquaintance**
 
-`"
-Hey, Person, I know from School,
-I hope you're doing well. I think we may have crossed paths in one of our classes.
+![Cold Email](./media-link/carbon.png)
 
-I saw on LinkedIn that you're working at Atlassian. Congrats! 
-I hope the job's been treating you well.
-
-I'd greatly appreciate a chance to chat about how to approach applying to companies effectively. I've already 
-applied quite a few companies, but haven't heard back.
-
-Do you have 20 mins sometime next week, say Tuesday, 
-June 25th, at 10 am, for a phone call? 
-
-A bit more about me:
---------------------------
-I'm a full-stack engineer that just graduated from 
-CSU Monterey Bay (California) with a degree in Computer 
-Science. I've built and shipped products that have users.
-I obsess over user experience, and I do whatever it takes 
-to deliver reliable, useful software.
-
-Out of my projects, I'm most proud of the work that I've
-done for the Pacific Grove Museum, to help researchers (do something).
-
-1 min video in which I explain and walk through the project: 
-Codebase: 
-Live demo: 
-
-Other links:
-Github
-Portfolio
-resume
---------------------------
-
-Once again, I would greatly appreciate any help/advice you may have. I look forward to hearing back. 
-
-Regards,
-Gautam Tata,
-ph: (925) 405-7741
-w: www.gautamtata.com
-`"
 **Professor**
-`"
-Hi, Professor who I know has a ton of contacts,
 
-I hope you've been well. Thanks for a great capstone and an 
-Amazing senior year!
-
-I'd greatly appreciate your help in the following
-ways, if possible:
-
-1. Could you introduce me to people you know at Tech companies 
-in the United States so that I can demonstrate to them what 
-I can bring it to their teams? I've already compiled this sheet
-in which I listed all of your contacts that I found on 
-LinkedIn, who I'd like to connect with. For each person you are willing to introduce me to, I will draft up a 
-tailored email targeted to that person. The email will include a summary of the work that I've done, and ask them for a
-chance to chat about open roles and for an opportunity to demonstrate
-what I can bring to their teams. Then, you can simply forward that email asking if they're okay with a connection and if yes, you can just CC me on that email thread. 
-
-2. Could you please provide feedback on the blurb I've included below? My 'about me' is the central piece in my outreach to companies. I've tried to make it as clear as possible 
-what I can do. Unfortunately, I haven't had much luck applying to companies online or directly reaching out 
-to engineering managers/recruiters at companies. 
-I would appreciate any advice you may have.
-
-------------------------
-About me:
-I'm a full-stack engineer that just graduated from CSU Monterey Bay
-with a degree in Computer Science. I've built and shipped products 
-that have users. I obsess over user experience, and I do whatever 
-it takes to deliver reliable, useful software.
-
-Out of my projects, I'm most proud of the web application 
-I built for the Pacific Grove Museum, to help researchers 
-effectively communicate the effects of climate change on 
-the local water ecosystem - to the local community. 
-This application was built in React and has had hundreds 
-of visitors so far.
-
-1 min video in which I explain and walk through the project: 
-Codebase: 
-Live demo: 
-
-
-Other links: Github, Portfolio, Resume, LinkedIn
-------------------------
-
-I know I'm asking for a lot. I want to minimize the 
-effort needed on your end to help me out, so please let me know if there's anything else I can do to 
-make this easier for you. I would greatly 
-appreciate your help. Thank you.
-
-Thanks,
-Gautam Tata,
-ph: 
-
-w: www.gautamtata.com
-`"
+![Cold Email](./media-link/carbon2.png)
 
 The other method you can use for a referral is to use [teamBlind](https://www.teamblind.com/post/How-do-you-ask-for-referrals-E5FCfr8Q). People there usually post for referrals and are often slammed by most people, but you only need that 1-2 to click! Just write a nice message, and I'm sure something will click.
 
@@ -216,39 +123,9 @@ TOOLS THAT YOU NEED TO USE:
 4. Companies that I got an interview from Quora, 23nMe, VSCO, Apple, Benchling, Mapbox, Zendesk, and many more.
 
 Here is a sample of a cold-email that I used: 
-`" 
-Hi Engineering Manager,
 
-I'd greatly appreciate a chance to help further 23andme's mission,
- by contributing as a software engineer on your team. 
 
-I'm a full-stack engineer that just graduated from CSU Monterey Bay
-with a degree in Computer Science and has built a variety of
-products - a few that have actual users. 
-I obsess over user experience and do whatever it takes to build a 
-the product that delivers value to its users.
-
-In all honesty, I only learned about 23andme a few months ago 
-from a friend who brought it up in a conversation about how 
-a huge use-case for machine learning is DNA processing and 
-how 23andme is a company that sits on tremendous data and 
-a tremendous opportunity to use it to improve healthcare 
-through prediction - an opportunity I find inspiring.
-
-I'd greatly appreciate a chance to chat with you about what
-I can bring to the table. Are you available for a 10 min 
-phone call or coffee in the coming weeks, say Friday 
-June 14th at 3 pm? I understand you're very busy and am happy to work around your schedule in any way.
-
-Thanks in advance.
-
---
-Regards,
-Gautam Tata
-c: (925) 405-7741
-w: gautamtata.com
-
-`"
+![Cold Email](./media-link/carbon.svg)
 
 Another Example
 
