--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -49,7 +49,7 @@ With an interviewer, you must always ask the question: Why do they want me? Alig
 
 ## Assumptions
 
-The first assumption is that you know how to code. You know a language that you are familiar with and (hopefully) know the in's and out's.
+The first assumption is that you know how to code. You know a language that you are familiar with and (hopefully) know it thoroughly.
 
 This article covers a general tech-interview blueprint: Behavioral interviews and technical interviews. It **does not** cover specific area questions like web development, embedded systems, etc.
 
@@ -98,7 +98,7 @@ The technical interview, whether whiteboarding or remote boils down to the same 
 * Can you solve it efficiently?
 * Can you communicate your thought process well?
 
-> Most coding interviews boil down to Hashmaps, DFS/BFS - Many Dev's
+> Most coding interviews boil down to Hashmaps, DFS/BFS - Nikhil Dev
 
 ### How To Approach Studying For The Coding Interview
 
@@ -113,13 +113,13 @@ List of **The most essential** Data Structures and Algorithms:
 * Kadane's Algorithm
 * Djikstra's Algorithm
 
-The important thing here is to know the in&out of your data structure in a language that you are comfortable with. Knowing the data-structure well gives you the ability to solve questions that you haven't faced before.
+The important thing here is to know all the technicalities of a data structure in a language that you are comfortable with. Knowing the data-structure well gives you the ability to solve questions that you haven't faced before.
 
 **How to solve questions**: The way I approached solving problems was by setting a time of 1 hour for each question. No Matter what, after 1 hour, I would stop, and this was to replicate an interview setting. I would try to solve a problem for 30 minutes, and if I couldn't, I would look up the solution and code it up in the last 30 minutes.
 
 Take note of the question that you had to look up and try to solve it again without looking the next day and then one more time after a week. Make sure that you're comfortable with it.
 
-**Where should I practice questions from**: The sources are usual. I practiced using [Cracking The Coding Interview](http://www.crackingthecodinginterview.com/) and using [LeetCode](https://leetcode.com/)
+**Where should I practice questions from**: The sources that I used to practice are pretty well-known. I practiced using [Cracking The Coding Interview](http://www.crackingthecodinginterview.com/) and using [LeetCode](https://leetcode.com/)
 
 A great source that I found that someone created a curated list of 50 or so questions on (Leetcode)[https://www.leetcode.com/] and this list is by far the best out there. I have seen the same pattern of questions being repeated over and over in interviews just with a different language. [Leetcode favorite list](https://leetcode.com/list/xoqag3yj/)
 
