--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -125,48 +125,11 @@ TOOLS THAT YOU NEED TO USE:
 Here is a sample of a cold-email that I used: 
 
 
-![Cold Email](./media-link/carbon.svg)
+![Cold Email](./media-link/cold3.png)
 
 Another Example
 
-`"
-Dear CEO of Company,
-
-I'd greatly appreciate a chance to further Mapbox's mission,
- by contributing as a software engineer/intern/apprentice on 
- your team.
-
-A little about me: My name is Gautam, and I am a recent graduate
-from CSU Monterey Bay. I have experience as a full-stack 
-web developer but something I realized very late is that
-I am crazy about working with Maps, data-viz and geospatial
-data and due to my experience with Web, I am finding it very
-difficult to get into this space being a new-grad. Therefore, 
-I am reaching out to you for any possible internship/apprenticeship 
-opportunities on your team.
-
-I have been learning a lot about working with maps but taking courses on OpenStreetMaps and learning tools like Apache Spark, Hadoop, PostGIS,
-etc. As a reference to what I have learned, I have built an
-application that demonstrates my capability to learn new technologies.  
-
-The project is a visualization of Uber drivers speeding around 
-London/SF schools. I built this by extracting OSM data and 
-processing it using Spark. 
-The link to the codebase: 
-I know this is a lot to ask, but I'd greatly appreciate a 
-chance to show you what I can bring to the table and if possible,
-I'd love to set up a 10-minute chat to do the same. 
-I can be reached at(myemail@gmail.com). 
-I understand that you are busy and
-I can work around your schedule in any way.
-
-Sincerely,
-
-Gautam Tata
-
-(phoneNumber/myemail@gmail.com)
-
-`"
+![Cold Email](./media-link/cold2.png)
 
 Yes, you read that right. That was the CEO of the company (whom I did get a response from!). The types of people I have cold emailed and gotten a response from are Engineers, Engineering Managers, VP's, and CEO.
 
