--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -89,11 +89,11 @@ Below I have attached samples of 2 emails that I used to ask for referrals. One 
 
 **Friend/Aquaintance**
 
-![Cold Email](./media-link/carbon.png)
+![Cold Email To Friend/Aquaintance](./media-link/carbon.png)
 
 **Professor**
 
-![Cold Email](./media-link/carbon2.png)
+![Cold Email To Professor](./media-link/carbon2.png)
 
 The other method you can use for a referral is to use [teamBlind](https://www.teamblind.com/post/How-do-you-ask-for-referrals-E5FCfr8Q). People there usually post for referrals and are often slammed by most people, but you only need that 1-2 to click! Just write a nice message, and I'm sure something will click.
 
@@ -125,11 +125,11 @@ TOOLS THAT YOU NEED TO USE:
 Here is a sample of a cold-email that I used: 
 
 
-![Cold Email](./media-link/cold3.png)
+![Cold Email To Engineering Manager](./media-link/cold3.png)
 
 Another Example
 
-![Cold Email](./media-link/cold2.png)
+![Cold Email To CEO](./media-link/cold2.png)
 
 Yes, you read that right. That was the CEO of the company (whom I did get a response from!). The types of people I have cold emailed and gotten a response from are Engineers, Engineering Managers, VP's, and CEO.
 
